# src/app/models/models.ts
@@ -1,21 +1,20 @@
-class Question {
+class Page {
   id: number;
   name: string;
   path: string;
-  events_t: string;
-  events_options: Map<string, any>;
-  content_t: string;
-  content_options: Map<string, any>;
-  directions: string;
-  notes: string;
-  script: string;
+  description: string;
+  fields: object; // (field name, value)
+  script: string; // walscript template
+  exercise: Exercise;
 
-  constructor(id: number, name: string, path: string) {
+  constructor(id: number, name: string, path: string, description = '', fields = {}, script = '', exercise: Exercise) {
     this.id = id;
     this.name = name;
     this.path = path;
-    this.events_options = new Map<string, string>();
-    this.content_options = new Map<string, string>();
+    this.description = description;
+    this.fields = fields;
+    this.script = script;
+    this.exercise = exercise;
   }
 }
 
@@ -23,11 +22,15 @@ class Exercise {
   id: number;
   name: string;
   path: string;
+  description: string;
+  lesson: Lesson;
 
-  constructor(id: number, name: string, path: string) {
+  constructor(id: number, name: string, path: string, description = '', lesson: Lesson) {
     this.id = id;
     this.name = name;
     this.path = path;
+    this.description = description;
+    this.lesson = lesson;
   }
 }
 
@@ -35,11 +38,13 @@ class Lesson {
   id: number;
   name: string;
   path: string;
+  description: string;
 
-  constructor(id: number, name: string, path: string) {
+  constructor(id: number, name: string, path: string, description = '') {
     this.id = id;
     this.name = name;
     this.path = path;
+    this.description = description;
   }
 }
 
@@ -50,11 +55,15 @@ class Asset {
   type: string;
   attribute: string;
 
-  constructor(id: number, name: string, path: string) {
+  constructor(id: number, name: string, path: string, type: string, attribute = '') {
     this.id = id;
     this.name = name;
     this.path = path;
+    this.type = type;
+    this.attribute = attribute;
   }
+
+  public getUrl = () => '/assets/uploads/' + this.path.split('/').pop();
 }
 
-export {Question, Exercise, Lesson, Asset};
+export {Page, Exercise, Lesson, Asset};
