# src/assets/swagger.yaml
@@ -11,28 +11,28 @@ schemes:
 produces:
 - "application/json"
 paths:
-  /questions:
+  /pages:
     get:
       tags:
       - "Editor"
-      description:                 "Returns information about questions at a given exercise."
-      operationId:                 "questionsGET"
+      description:                 "Returns information about pages at a given exercise."
+      operationId:                 "pagesGET"
       produces:
       - "application/json"
       parameters:
       - name:                      "exercise_id"
         in:                        "query"
-        description:               "Exercise to list questions"
+        description:               "Exercise to list pages"
         required:                  true
         type:                      "integer"
         format:                    "int32"
       responses:
         200:
-          description:             "An array of questions"
+          description:             "An array of pages"
           schema:
             type:                  "array"
             items:
-              $ref:                "#/definitions/Question"
+              $ref:                "#/definitions/Page"
         default:
           description:             "Unexpected error"
           schema:
@@ -41,17 +41,17 @@ paths:
     post:
       tags:
       - "Editor"
-      description:                 "Adds a new question to a given exercise."
-      operationId:                 "questionsPOST"
+      description:                 "Adds a new page to a given exercise."
+      operationId:                 "pagesPOST"
       produces:
       - "application/json"
       parameters:
       - in:                        "body"
         name:                      "body"
-        description:               "Question with default ID to be added"
+        description:               "Page with default ID to be added"
         required:                  true
         schema:
-          $ref:                    "#/definitions/Question"
+          $ref:                    "#/definitions/Page"
       responses:
         200:
           description:             "OK"
@@ -63,17 +63,17 @@ paths:
     put:
       tags:
       - "Editor"
-      description:                 "Edits a question."
-      operationId:                 "questionsPUT"
+      description:                 "Edits a page."
+      operationId:                 "pagesPUT"
       produces:
       - "application/json"
       parameters:
       - in:                        "body"
         name:                      "body"
-        description:               "Question with given ID to be updated"
+        description:               "Page with given ID to be updated"
         required:                  true
         schema:
-          $ref:                    "#/definitions/Question"
+          $ref:                    "#/definitions/Page"
       responses:
         200:
           description:             "OK"
@@ -82,26 +82,26 @@ paths:
         405:
           description:             "Invalid input"
       x-swagger-router-controller: "Editor"
-  /questions/{id}:
+  /pages/{id}:
     get:
       tags:
       - "Editor"
-      description:                 "Returns information about the question of a specified ID."
-      operationId:                 "questionsIdGET"
+      description:                 "Returns information about the page of a specified ID."
+      operationId:                 "pagesIdGET"
       produces:
       - "application/json"
       parameters:
       - name:                      "id"
         in:                        "path"
-        description:               "ID of question"
+        description:               "ID of page"
         required:                  true
         type:                      "integer"
         format:                    "int32"
       responses:
         200:
-          description:             "A question"
+          description:             "A page"
           schema:
-            $ref:                  "#/definitions/Question"
+            $ref:                  "#/definitions/Page"
         default:
           description:             "Unexpected error"
           schema:
@@ -110,14 +110,14 @@ paths:
     delete:
       tags:
       - "Editor"
-      description:                 "Deletes a question."
-      operationId:                 "questionsIdDELETE"
+      description:                 "Deletes a page."
+      operationId:                 "pagesIdDELETE"
       produces:
       - "application/json"
       parameters:
       - name:                      "id"
         in:                        "path"
-        description:               "ID of question"
+        description:               "ID of page"
         required:                  true
         type:                      "integer"
         format:                    "int32"
@@ -484,43 +484,28 @@ paths:
           description:             "Invalid input"
       x-swagger-router-controller: "Assets"
 definitions:
-  Question:
+  Page:
     type:                          "object"
     properties:
       id:
         type:                      "integer"
         format:                    "int32"
-        description:               "ID of question"
+        description:               "ID of page"
       name:
         type:                      "string"
-        description:               "Name of question"
+        description:               "Name of page"
       path:
         type:                      "string"
-        description:               "Path of question"
+        description:               "Path of page"
       description:
         type:                      "string"
-        description:               "Description of question"
-      events_t:
+        description:               "Description of page"
+      fields:
         type:                      "string"
-        description:               "Recording mode of question"
-      events_options:
-        type:                      "string"
-        description:               "Recording mode options of question"
-      content_t:
-        type:                      "string"
-        description:               "Template of question"
-      content_options:
-        type:                      "string"
-        description:               "Template options of question"
-      directions:
-        type:                      "string"
-        description:               "Directions of question"
-      notes:
-        type:                      "string"
-        description:               "Notes of question"
+        description:               "Field data of page"
       script:
         type:                      "string"
-        description:               "Script of question"
+        description:               "Script of page"
       exercise:
         type:                      "integer"
         format:                    "int32"
