# src/server/controllers/EditorService.js
@@ -3,9 +3,12 @@
 var Model = require('../models/models.js');
 
 var DataSource = Model.DataSource;
-var Question = Model.Question;
+var Page = Model.Page;
 var Exercise = Model.Exercise;
 var Lesson = Model.Lesson;
+
+const _ = require('lodash');
+const rstr = require("randomstring");
 
 DataSource.sync();
 
@@ -102,11 +105,17 @@ exports.exercisesPOST = function(args, res, next) {
 
   Exercise.create({
     name: args.body.value.name,
-    path: args.body.value.path,
+    path: _.isEmpty(args.body.value.path) ? rstr.generate() : args.body.value.path,
     description: args.body.value.description,
     lessonId: args.body.value.lesson
   }).then((d) => {
-    ret['application/json'] = d.get('id');
+    ret['application/json'] = {
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description')),
+      "lesson": null2Undefined(d.get('lessonId'))
+    };
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   });
@@ -123,18 +132,24 @@ exports.exercisesPUT = function(args, res, next) {
 
   Exercise.update({
     name: args.body.value.name,
-    path: args.body.value.path,
+    path: _.isEmpty(args.body.value.path) ? rstr.generate() : args.body.value.path,
     description: args.body.value.description,
     lessonId: args.body.value.lesson
   }, {
     where: {
       id: args.body.value.id
     }
+  }).then((d) => {
+    ret['application/json'] = {
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description')),
+      "lesson": null2Undefined(d.get('lessonId'))
+    };
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   });
-
-  ret['application/json'] = { "code": 200 };
-  res.setHeader('Content-Type', 'application/json');
-  res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
 }
 
 exports.lessonsGET = function(args, res, next) {
@@ -221,9 +236,15 @@ exports.lessonsPOST = function(args, res, next) {
 
   Lesson.create({
     name: args.body.value.name,
-    path: args.body.value.path
+    path: _.isEmpty(args.body.value.path) ? rstr.generate() : args.body.value.path,
+    description: args.body.value.description,
   }).then((d) => {
-    ret['application/json'] = d.get('id');
+    ret['application/json'] = {
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description'))
+    };
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   });
@@ -240,43 +261,44 @@ exports.lessonsPUT = function(args, res, next) {
 
   Lesson.update({
     name: args.body.value.name,
-    path: args.body.value.path
+    path: _.isEmpty(args.body.value.path) ? rstr.generate() : args.body.value.path,
+    description: args.body.value.description
   }, {
     where: {
       id: args.body.value.id
     }
+  }).then((d) => {
+    ret['application/json'] = {
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description'))
+    };
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   });
-
-  ret['application/json'] = { "code": 200 };
-  res.setHeader('Content-Type', 'application/json');
-  res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
 }
 
-exports.questionsGET = function(args, res, next) {
+exports.pagesGET = function(args, res, next) {
   /**
-   * Returns information about questions at a given exercise.
+   * Returns information about pages at a given exercise.
    *
-   * exercise_id Integer Exercise to list questions
+   * exercise_id Integer Exercise to list pages
    * returns List
    **/
   var ret = {};
 
-  Question.findAll({
+  Page.findAll({
     where: {
       exerciseId: args.exercise_id.value
     }
-  }).then(function(questions) {
-    ret['application/json'] = questions.map((d) => ({
+  }).then(function(pages) {
+    ret['application/json'] = pages.map((d) => ({
       "id": null2Undefined(d.get('id')),
       "name": null2Undefined(d.get('name')),
       "path": null2Undefined(d.get('path')),
       "description": null2Undefined(d.get('description')),
-      "events_t": null2Undefined(d.get('events_t')),
-      "events_options": null2Undefined(d.get('events_options')),
-      "content_t": null2Undefined(d.get('content_t')),
-      "content_options": null2Undefined(d.get('content_options')),
-      "directions": null2Undefined(d.get('directions')),
-      "notes": null2Undefined(d.get('notes')),
+      "fields": null2Undefined(d.get('fields')),
       "script": null2Undefined(d.get('script')),
       "exercise": null2Undefined(d.get('exerciseId'))
     }));
@@ -287,16 +309,16 @@ exports.questionsGET = function(args, res, next) {
   });
 }
 
-exports.questionsIdDELETE = function(args, res, next) {
+exports.pagesIdDELETE = function(args, res, next) {
   /**
-   * Deletes a question.
+   * Deletes a page.
    *
-   * id Integer ID of question
+   * id Integer ID of page
    * returns String
    **/
   var ret = {};
 
-  Question.destroy({
+  Page.destroy({
     where: {
       id: args.id.value
     }
@@ -307,16 +329,16 @@ exports.questionsIdDELETE = function(args, res, next) {
   res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
 }
 
-exports.questionsIdGET = function(args, res, next) {
+exports.pagesIdGET = function(args, res, next) {
   /**
-   * Returns information about the question of a specified ID.
+   * Returns information about the page of a specified ID.
    *
-   * id Integer ID of question
+   * id Integer ID of page
    * returns inline_response_200
    **/
   var ret = {};
 
-  Question.find({
+  Page.find({
     where: {
       id: args.id.value
     }
@@ -330,12 +352,7 @@ exports.questionsIdGET = function(args, res, next) {
       "name": null2Undefined(d.get('name')),
       "path": null2Undefined(d.get('path')),
       "description": null2Undefined(d.get('description')),
-      "events_t": null2Undefined(d.get('events_t')),
-      "events_options": null2Undefined(d.get('events_options')),
-      "content_t": null2Undefined(d.get('content_t')),
-      "content_options": null2Undefined(d.get('content_options')),
-      "directions": null2Undefined(d.get('directions')),
-      "notes": null2Undefined(d.get('notes')),
+      "fields": null2Undefined(d.get('fields')),
       "script": null2Undefined(d.get('script')),
       "exercise": null2Undefined(d.get('exerciseId'))
     };
@@ -346,64 +363,70 @@ exports.questionsIdGET = function(args, res, next) {
   });
 }
 
-exports.questionsPOST = function(args, res, next) {
+exports.pagesPOST = function(args, res, next) {
   /**
-   * Adds a new question to a given exercise.
+   * Adds a new page to a given exercise.
    *
-   * body Body_1 Question with default ID to be added
+   * body Body_1 Page with default ID to be added
    * returns String
    **/
   var ret = {};
 
-  Question.create({
+  Page.create({
     name: args.body.value.name,
-    path: args.body.value.path,
+    path: _.isEmpty(args.body.value.path) ? rstr.generate() : args.body.value.path,
     description: args.body.value.description,
-    events_t: args.body.value.events_t,
-    events_options: args.body.value.events_options,
-    content_t: args.body.value.content_t,
-    content_options: args.body.value.content_options,
-    directions: args.body.value.directions,
-    notes: args.body.value.notes,
+    fields: args.body.value.fields,
     script: args.body.value.script,
     exerciseId: args.body.value.exercise
   }).then((d) => {
-    ret['application/json'] = d.get('id');
+    ret['application/json'] = {
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description')),
+      "fields": null2Undefined(d.get('fields')),
+      "script": null2Undefined(d.get('script')),
+      "exercise": null2Undefined(d.get('exerciseId'))
+    };
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   });
 }
 
-exports.questionsPUT = function(args, res, next) {
+exports.pagesPUT = function(args, res, next) {
   /**
-   * Edits a question.
+   * Edits a page.
    *
-   * body Body Question with given ID to be updated
+   * body Body Page with given ID to be updated
    * returns String
    **/
   var ret = {};
 
-  Question.update({
+  Page.update({
     name: args.body.value.name,
-    path: args.body.value.path,
+    path: _.isEmpty(args.body.value.path) ? rstr.generate() : args.body.value.path,
     description: args.body.value.description,
-    events_t: args.body.value.events_t,
-    events_options: args.body.value.events_options,
-    content_t: args.body.value.content_t,
-    content_options: args.body.value.content_options,
-    directions: args.body.value.directions,
-    notes: args.body.value.notes,
+    fields: args.body.value.fields,
     script: args.body.value.script,
     exerciseId: args.body.value.exercise
   }, {
     where: {
       id: args.body.value.id
     }
+  }).then((d) => {
+    ret['application/json'] = {
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description')),
+      "fields": null2Undefined(d.get('fields')),
+      "script": null2Undefined(d.get('script')),
+      "exercise": null2Undefined(d.get('exerciseId'))
+    };
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   });
-
-  ret['application/json'] = { "code": 200 };
-  res.setHeader('Content-Type', 'application/json');
-  res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
 }
 
 let null2Undefined = function(v) {
